fix: CartProduct title on mobile, add scroll to top in StepTwoSection

--- a/src/components/Pages/Cart/components/CartProduct/index.module.scss
+++ b/src/components/Pages/Cart/components/CartProduct/index.module.scss
@@ -112,7 +112,6 @@
 
     &--mobile {
       text-align: start;
-      white-space: nowrap;
     }
 
     @include on-desktop {
